fix about text on mobile to not justify

--- a/css/style.css
+++ b/css/style.css
@@ -134,8 +134,4 @@ footer {
     .images-title {
         text-align: center;
     }
-    .about-text {
-        text-align: justify;
-        text-justify: inter-word;
-    }
 }
